# madm-non-compensatory-solvers

./: .gitignore  .pylintrc  README.md  data.csv  pyproject.toml  requirements.txt  run.py
extra-input/: conjunctive.csv  disjunctive.csv  lexicographic-semi-order.csv  lexicographic.csv  permutation.csv
internal/: exporter.py  loader.py  options.py
internal/solver/: __init__.py  base.py  dominance.py  lexicographic.py  max_methods.py  permutation.py  standard_level.py
outputs/: conjunctive.csv  disjunctive.csv  dominance.csv  lexicographic.csv  maximax.csv  maximin.csv  permutation.csv
