[tool.poetry]
name = "madm-non-compensatory"
version = "0.1.0"
description = ""
authors = ["MohammadAmin Vahedinia <mohammadamin@vahedinia.me>"]

[tool.poetry.dependencies]
python = "^3.7"
python-csv = "^0.0.13"
prettytable = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
